testsuite/tests/builtins/str_methods/contains/both_pos_and_named/test.out
Error: Both positional and named value
   ╭─[ <working-dir>/script.lkql:2:1 ]
   │
 2 │ s.contains("Hel", to_find="Hel")
   │ ────────────────┬───────────────  
   │                 ╰───────────────── The parameter "to_find" has been provided a positional and a named value
───╯
